fixed api documentation + demo logins added to login page